[package]
name = "cardcraftr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
lazy-regex = "3.2.0"
async-trait = "0.1.81"
strum_macros = "0.26.4"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }



[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.1"